Based on PR kern/44069, revert revision 1.79.

XXX: The actual problem related to Qemu/KVM is yet to be determined.